[tool.poetry]
name = "monocular-depth-estimation"
version = "0.1.0"
description = ""
authors = ["MonikaVen <monika.venckauskaite@gmail.com>"]
readme = "README.md"
packages = [{include = "monocular_depth_estimation"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
transformers = "^4.29.2"
requests = "^2.30.0"
pillow = "^9.5.0"
tensorflow = "^2.12.0"
torch = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
